# youtubeplaylist

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  repositorio.md
backend/: docker-start.sh  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/routes/: playlists.py  test_seed.py  videos.py
backend/app/db/: fts.py  migrations.py  models.py  session.py
backend/app/schemas/: playlist.py
backend/app/services/: innertube_playlist_client.py  search_service.py  sync_service.py  transcript_service.py  video_moment_service.py  youtube_client.py  youtube_models.py
backend/tests/: conftest.py
backend/tests/integration/: test_innertube_large_playlist_live.py  test_playlist_delete.py  test_search.py  test_sync.py  test_sync_new_videos.py  test_video_moments.py  test_video_replay_settings.py
backend/tests/smoke/: test_playlists_smoke.py
backend/tests/unit/: test_parsers.py  test_transcript_service.py  test_youtube_client.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/smoke/: app-smoke.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: PlaylistHome.tsx  PlaylistLibraryCard.test.tsx  PlaylistLibraryCard.tsx  PlaylistView.tsx  SearchBar.test.tsx  SearchBar.tsx  VideoCard.test.tsx  VideoCard.tsx  VideoMomentChips.test.tsx  VideoMomentChips.tsx  VideoPlaybackControls.tsx  VideoPlayer.tsx
frontend/src/types/: youtube.d.ts
scripts/: run-all-tests.ps1  run-smoke-tests.ps1  start-app.ps1
(+13 files in other folders)
