[project]
name = "youtube-playlist-backend"
version = "0.1.0"
description = "Backend API for YouTube Playlist PWA"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic-settings>=2.6.0",
    "youtube-transcript-api>=0.6.3",
    "python-multipart>=0.0.17",
    "yt-dlp>=2024.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
